# serializers_fuzz_tests

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.clusterfuzzlite/: Dockerfile  build.sh  corpus_generator.py  project.yaml
.github/workflows/: fuzzing.yml
src/: boost_serialization.hpp  cereal.hpp  generator.cpp  inputs.hpp  main.cpp  msgpack.hpp  types.hpp  yas.hpp
tools/: generate_types.py
